# spice

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  AUTHORS  Makefile.am  NEWS  README  cfg.mk  configure.ac  meson.build  meson_options.txt
client/: application.cpp  application.h  audio_channels.h  controller.cpp  foreign_menu.cpp  platform.h  playback_channel.cpp  record_channel.cpp  red_window.h  screen.cpp  screen.h
client/windows/: platform.cpp  red_window.cpp
client/x11/: Makefile.am  platform.cpp  playback.cpp  playback.h  record.cpp  record.h  red_window.cpp
docs/: Makefile.am  meson.build  spice_style.txt  spice_threading_model.txt
docs/manual/: Makefile.am  SpiceUserManual-Basics.xml  SpiceUserManual-Guest.xml  SpiceUserManual-Installation.xml  SpiceUserManual-Introduction.xml  SpiceUserManual-References.xml  SpiceUserManual.xml  manual.txt  meson.build
m4/: ax_valgrind_check.m4  spice-compile-warnings.m4
server/: .gitignore  Makefile.am  agent-msg-filter.c  agent-msg-filter.h  cache-item.h  cache-item.tmpl.c  char-device.c  char-device.h  char_device.c  common-graphics-channel.c  common-graphics-channel.h  cursor-channel-client.c  cursor-channel-client.h  cursor-channel.c  cursor-channel.h  dcc-encoders.c  dcc-encoders.h  dcc-private.h  dcc-send.c  dcc.c  dcc.h  demarshallers.h  dispatcher.c  dispatcher.h  display-channel-private.h  display-channel.c  display-channel.h  display-limits.h  dummy-channel-client.c  dummy-channel-client.h  dummy-channel.c  dummy-channel.h  event-loop.c  event-loop.tmpl.c  glib-compat.h  glz-encode.tmpl.c  glz-encoder-dict.c  glz-encoder-dict.h  glz-encoder-priv.h  glz-encoder.c  (+137 more)
server/tests/: .gitignore  Makefile.am  README  basic-event-loop.c  basic-event-loop.h  basic_event_loop.c  basic_event_loop.h  meson.build  replay.c  spice-codecs-parsing-test.c  spice-options-test.c  stat-file-test.c  stat-main.c  stat-test.c  stream-test.c  test-agent-msg-filter.c  test-channel.c  test-codecs-parsing.c  test-display-base.c  test-display-base.h  test-display-no-ssl.c  test-display-resolution-changes.c  test-display-streaming.c  test-display-width-stride.c  test-empty-success.c  test-fail-on-null-core-interface.c  test-glib-compat.c  test-glib-compat.h  test-gst.c  test-just-sockets-no-ssl.c  test-leaks.c  test-listen.c  test-loop.c  test-multiple.py  test-options.c  test-playback.c  test-qxl-parsing.c  test-sasl.c  test-stat-file.c  test-stat.c  (+11 more)
server/tests/pki/: ca-cert.pem  server-cert.pem  server-key.pem
server/tests/valgrind/: glib.supp
tools/: .gitignore  Makefile.am  meson.build  reds_stat.c
